force-app/main/default/objects/Field_Change_Relation_Tracking__mdt/Field_Change_Relation_Tracking__mdt.object-meta.xml
<CustomObject>
    <description>Metadata to store the API names of the various Field Change Tracking Relation objects</description>
    <label>Field Change Relation Tracking</label>
    <pluralLabel>Field Change Relation Tracking</pluralLabel>
</CustomObject>