force-app/main/default/objects/Field_Change_Relation_Tracking__mdt/fields/Relation_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Relation_Object_Name__c</fullName>
    <label>Relation Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>